# pathway-localization

./: .gitignore  License  README.md  environment.yml  versioned_environment.yml
caseStudy/: README.md  Snakefile  bestParams.txt  combineAnalyzeRes.py  models.py  prepCaseStudyData.py  trainCaseStudy.py  tuneCaseStudy.py
cnn/: localizationPyTorchGeo.ipynb  localizationPyTorchGeo.py  models.py
cnnSnakeMake/: Snakefile  analyzeLocData.py  analyzePyTorchResults.py  combineAnalyzeRes.py  localizationPyTorchAx.py  localizationPyTorchGeo.py  localizationTuningAx.py  models.py  plotResults.py  prepPGMData.py  prepPytorchData.py  pyTorchMakeRuns.py  runPGM.sh  sckitModels.py
cnnSnakeMake/data/: allReactomePaths.txt  compartmentsNodes.tsv
data/dataProcessingScripts/: createComplexNodes.py  getReactomePaths.py  mapLocGOTerms.py  parseBioPax.py  prepCompartmentsDB.py  processUniprotKeywords.py
databasePrediction/: Snakefile  allRes.tar  combineAnalyzeRes.py  localizationPyTorchGeo.py  localizationTuningAx.py  models.py  parsePGMOutput.py  plotResults.py  prepPGMData.py  prepPytorchData.py  runPGM.sh  sckitModels.py  unpackData.sh
databasePrediction/data/: allDevReactomePaths.txt  allDevReactomePaths.txt_val  allPathBank.txt  allPathBank.txt_val  allReactomePathsWithDev.txt  comPPINodes.tsv  reactomeWithComs.txt  somePathBank.txt_val  uniprotKeywordsPCA_5.tsv
databasePrediction/pgm/train_nets/: CMakeLists.txt  train_nets.cpp  train_nets.h
databasePrediction/pgm_runs/: pgm_NaivePGM-allPathBank-comPPINodes.p  pgm_NaivePGM-allPathBank-comPPINodes.p_raw  (+18 more)
(+27 files in other folders)
